--- a/style.css
+++ b/style.css
@@ -85,9 +85,14 @@ form input[type="text"] {
 	text-align: center;
 }
 td:hover{
-	background-color: black;
+	background-color: #383838;
 }
 
 tr.theader td {
 	border-bottom: groove solid #FFFFFF;
+}
+
+td {
+	width: 133px;
+	height: 50px;
 }
