--- a/style.css
+++ b/style.css
@@ -2,16 +2,27 @@
 /* CSS Document */
 
 .crop {
-	object-fit: cover; /* Do not scale the image */
-	object-position: center; /* Center the image within the element */
+	object-fit: cover; 
+	object-position: center; 
 	height: 800px;
 	width: 600px;
-    margin: 0;
-    position: absolute;
-    top: 50%;
+	margin: 0;
+	position: absolute;
+	top: 50%;
     left: 30%;
     transform: translate(-50%, -50%);
 }
+
+.links {
+	position: absolute;
+    top: 47.26%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+	width: 400px;
+	height: 756px;
+	overflow: hidden;	
+}
+
 
 .main{
 	height: 800px;
@@ -23,16 +34,6 @@
     transform: translate(-50%, -50%);
 	background-color: #2C2C2C;
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-
-.links {
-	position: absolute;
-    top: 47.26%;
-    left: 80%;
-    transform: translate(-50%, -50%);
-	width: 400px;
-	height: 756px;
-	overflow: hidden;	
 }
 
 .searchb {
@@ -57,23 +58,6 @@ body {
     background-color: #1B1B1B;
 }
 
-table{
-	border: none;
-	width:100%;
-	height: 100%;
-	border-spacing: 0px;
-	color: white;
-	text-align: center;
-}
-
-ul{vertical-align: top;
-	vertical-align: text-top;
-	text-align: top;
-	width:100%;
-	height: 100%;
-	list-style-type: none;
-}
-
 form input[type="text"] {
     border: 1px solid #2C2C2C;
     font-size: 16px;
@@ -84,6 +68,21 @@ form input[type="text"] {
 	color: white;
 	text-align: center;
 }
+
+table{
+	border: none;
+	width:100%;
+	height: 100%;
+	border-spacing: 0px;
+	color: white;
+	text-align: center;
+}
+
+td {
+	width: 133px;
+	height: 50px;
+}
+
 td:hover{
 	background-color: #383838;
 }
@@ -92,7 +91,10 @@ tr.theader td {
 	border-bottom: groove solid #FFFFFF;
 }
 
-td {
-	width: 133px;
-	height: 50px;
+ul{vertical-align: top;
+	vertical-align: text-top;
+	text-align: top;
+	width:100%;
+	height: 100%;
+	list-style-type: none;
 }
